--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a
               href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Project</a
+              >Projects</a
             >
           </li>
           <li class="nav__link">
